# MetaHackathon

./: .gitignore  CLAUDE.md  Maestro_Roadmap.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_slice1_persistence_foundations.py  0002_incident_resolution.py
backend/src/meta_rne/: __init__.py
backend/src/meta_rne/adapters/: __init__.py  arista.py  cisco.py  registry.py
backend/src/meta_rne/api/: __init__.py  app.py  clock.py  cors.py  dependencies.py  errors.py  routes.py  schemas.py
backend/src/meta_rne/application/: __init__.py  config_ingestion.py  device_drift.py  errors.py  incident_queries.py  incident_resolution.py  models.py  snapshot_id.py
backend/src/meta_rne/detection/: __init__.py  drift_detector.py  incident_factory.py  policy_evaluator.py
backend/src/meta_rne/domain/: __init__.py  config.py  device.py  drift.py  errors.py  incident.py  policy.py  ports.py  snapshot.py
backend/src/meta_rne/observability/: __init__.py
backend/src/meta_rne/persistence/: __init__.py  errors.py  incident_id.py  incident_validation.py  seeds.py  serialization.py
backend/tests/: conftest.py
backend/tests/contract/api/: test_config_ingestion_api.py  test_cors_api.py  test_device_drift_api.py  test_health_api.py  test_incident_resolution_api.py  test_incidents_api.py  test_openapi_contract.py  test_startup_seeding_api.py
backend/tests/contract/persistence/: conftest.py  test_device_repository_contract.py  test_incident_repository_contract.py  (+3 more)
(+116 files in other folders)
